# HTML_parsing_differentials

./: README.md
mutagen/: .gitignore  Makefile  README.md  build-docker.sh  config.toml  dune  dune-project  local.toml  localhost.toml  run_analysis.sh  run_generate.sh  run_local.sh
mutagen/analysis/: browser.ml  compare_browsers.ml  compare_reference.ml  data.ml  diverging.ml  dom_clobbering.ml  dom_clobbering_differentials.ml  dune  mangled.ml  mangled_all.ml  sanitizer.ml
mutagen/comparison/: compare.ml  dune  main.ml
mutagen/doc/: index.md  setup.md  setup.pgsql  setup.sql
mutagen/docker/: Dockerfile.analysis  Dockerfile.generator
mutagen/generate/: dune  local.ml  main.ml  minimize.ml
mutagen/lib/: ast.ml  bounded_counting_list.ml  bounded_list.ml  choice.ml  choice.mli  clobbering_analysis.ml  config.ml  database.ml  dune  gen.ml  html_parser.ml  lexer.mll  metrics.ml  mutated.ml  parser.mly  preprocessing.ml  sanitizer_analysis.ml  score.ml  tag.ml  time.ml  timings.ml  util.ml
mutagen/lib/markup/: .ocamlformat-ignore  README.md  common.ml  dune  encoding.ml  entities.ml  error.ml  html_tokenizer.ml  input.ml  kstream.ml  kstream.mli  stream_io.ml  text.ml  tokenizer.ml  trie.ml
mutagen/script/: .eslintrc  gen_util_tests.js
mutagen/test/: clobbering.ml  dom_parser.ml  dune  metrics.ml  mutated.ml  mxssy_test.ml  tags.ml  tokenize.ml  util.ml
mutagen/test/data/: dune  test_cases.ml  util_data.ml
runner/: README.md  pg.conf  sanitizer_with_dom_export.yml
runner/pgsetup/: add_user.sh  setup.sh
testbed/: README.md  build-docker.sh
testbed/dotnet/: Database.cs  Dockerfile  Fragment.cs  ISanitizer.cs  Program.cs  SanitizerResult.cs  build-docker.sh  mxssy.csproj
testbed/dotnet/sanitizers/: GanssExtensionMethods.cs  GanssSanitizer.cs  GanssSanitizerLax.cs  HtmlRule.cs  HtmlRuleExtensionMethods.cs  HtmlRuleLax.cs  StringExtensions.cs
testbed/java/: Dockerfile  build-docker.sh  settings.gradle
testbed/java/app/: build.gradle
testbed/java/app/src/main/java/mxss/: App.java  CodeFragment.java  Database.java  Result.java  SanitizerRunner.java  Testing.java
testbed/java/app/src/main/java/mxss/sanitizer/: AntiSamy.java  JsoupBasic.java  JsoupLax.java  JsoupSanitizer.java  Sanitizer.java
testbed/java/app/src/main/resources/: antisamy-lax.xml  antisamy.xml
testbed/java/app/src/test/java/mxss/: AppTest.java
testbed/javascript/: .eslintrc  .gitignore  Dockerfile  Dockerfile.db  Dockerfile.local  Dockerfile.sanitize  browsers.js  build-docker.sh  common.js  db.js  db_runner.js  package.json  pw-locally.js  pw-validator.js  run-locally.js  run.js  sanitize.js  sanitizers.js  test.js
testbed/javascript/patches/: google-caja-sanitizer+1.0.4.patch  sanitize-html+2.7.0.patch  sanitizehtml-curr+2.11.0.patch  sanitizer+0.1.3.patch
testbed/javascript/snippets/: print_dom_tree.js
testbed/php/: .gitignore  Dockerfile  SanitizerResult.php  build-docker.sh  composer.json  db.php  printing_visitor.php  run.php  sanitizer.php  typo3-sanitizer.php  typo3_sanitizer.php  typo3_sanitizer_lax.php
testbed/ruby/: Dockerfile  Dockerfile.test  Gemfile  README.md  build-docker.sh  run.rb  test.rb
